--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "moment": "^2.14.1"
   },
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.3.1"
+    "ionic": "driftyco/ionic-bower#1.3.1",
+    "ngCordova": "^0.1.27-alpha"
   }
 }
