--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.12.10",
     "del": "^2.2.0",
     "gulp": "~3.9.0",
+    "gulp-angular-templatecache": "^2.0.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.1",
