--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   },
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1",
-    "ngCordova": "^0.1.27-alpha"
+    "ngCordova": "^0.1.27-alpha",
+    "platform.js": "platform#^1.3.1"
   }
 }
